fix tooltip wraping down the label text
https://trello.com/c/BCKLj9De

--- a/src/scss/components/_backoffice.scss
+++ b/src/scss/components/_backoffice.scss
@@ -878,6 +878,10 @@
   min-width: 350px;
 }
 
+.backoffice-tooltip-label {
+  white-space: nowrap;
+}
+
 .color-picker-container {
   position: relative;
 }
